Add more basic styling

--- a/index.html
+++ b/index.html
@@ -9,19 +9,25 @@
 </head>
 <body>
     <header>
-        <div class="header-top"></div>
-        <div class="header-bottom">
-            <div id="hello-container">
-                <p>Hi, there</p>
-                <h2>John Smith</h2>
-            </div>
-            <div id="header-main-buttons">
-                <button class="new">New</button><button class="upload">Upload</button><button class="share">Share</button>
-            </div>
+        <form action="">
+            <input type="text" name="search" id="header-search" placeholder="Search...">
+            <button type="submit">Search</button>
+        </form>
+        <div id="account-container">
+            <h3>John Smith</h3>
+        </div>
+        <div id="hello-container">
+            <p>Hi, there</p>
+            <h2>John Smith</h2>
+        </div>
+        <div id="header-main-buttons">
+            <button class="new">New</button><button class="upload">Upload</button><button class="share">Share</button>
         </div>
     </header>
     <div id="sidebar">
-        <div class="logo">Dashboard</div>
+        <div class="logo">
+            <h2>Dashboard</h2>
+        </div>
         <div id="sidebar-buttons">
             <ul>
                 <li>Home</li>
@@ -46,27 +52,27 @@
             <div id="card-container">
                 <div class="card">
                     <h3>Super Cool Project</h3>
-                    <p>insert stuff here</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis officiis nobis maiores ipsum eveniet id.</p>
                 </div>
                 <div class="card">
                     <h3>Less Cool Project</h3>
-                    <p>insert stuff here</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem vitae ea explicabo quo! Laudantium, sit.</p>
                 </div>
                 <div class="card">
                     <h3>Impossible App</h3>
-                    <p>insert stuff here</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi minus, facere omnis aut deleniti minima!</p>
                 </div>
                 <div class="card">
                     <h3>Easy Peasy App</h3>
-                    <p>insert stuff here</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic, iure deleniti consequatur qui tempora saepe.</p>
                 </div>
                 <div class="card">
                     <h3>Ad Blocker</h3>
-                    <p>insert stuff here</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis repellat maiores similique molestias architecto quis?</p>
                 </div>
                 <div class="card">
                     <h3>Money Maker</h3>
-                    <p>insert stuff here</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis libero deleniti ratione nostrum sequi voluptate.</p>
                 </div>
             </div>
         </div>
@@ -75,34 +81,37 @@
             <div id="announcement-container">
                 <div class="announcement">
                     <h3>Site Maintenance</h3>
-                    <p>insert stuff here</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam ratione dignissimos doloribus fugit?</p>
                 </div>
                 <div class="announcement">
                     <h3>Community Share Day</h3>
-                    <p>insert stuff here</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti itaque obcaecati ea quos.</p>
                 </div>
                 <div class="announcement">
                     <h3>Updated Privacy Policy</h3>
-                    <p>insert stuff here</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae facere nostrum ducimus veritatis?</p>
                 </div>
             </div>
         </div>
         <div id="trending">
-            <div class="user-container">
-                <h4>@tegan</h4>
-                <p>World Peace Builder</p>
-            </div>
-            <div class="user-container">
-                <h4>@morgan</h4>
-                <p>Super Cool Project</p>
-            </div>
-            <div class="user-container">
-                <h4>@kendall</h4>
-                <p>Life Changing App</p>
-            </div>
-            <div class="user-container">
-                <h4>@alex</h4>
-                <p>No Traffic Maker</p>
+            <h2>Trending</h2>
+            <div id="trending-user-container">
+                <div class="user-container">
+                    <h4>@tegan</h4>
+                    <p>World Peace Builder</p>
+                </div>
+                <div class="user-container">
+                    <h4>@morgan</h4>
+                    <p>Super Cool Project</p>
+                </div>
+                <div class="user-container">
+                    <h4>@kendall</h4>
+                    <p>Life Changing App</p>
+                </div>
+                <div class="user-container">
+                    <h4>@alex</h4>
+                    <p>No Traffic Maker</p>
+                </div>
             </div>
         </div>
     </div>
