Add sidebar icons

--- a/index.html
+++ b/index.html
@@ -26,23 +26,24 @@
     </header>
     <div id="sidebar">
         <div class="logo">
+            <img src="/images/view-dashboard.svg">
             <h2>Dashboard</h2>
         </div>
         <div id="sidebar-buttons">
             <ul>
-                <li>Home</li>
-                <li>Profile</li>
-                <li>Messages</li>
-                <li>History</li>
-                <li>Tasks</li>
-                <li>Communities</li>
+                <li><img src="/images/home.svg">Home</li>
+                <li><img src = "/images/card-account-details-outline.svg">Profile</li>
+                <li><img src="/images/message-reply.svg">Messages</li>
+                <li><img src="/images/clock-time-three.svg">History</li>
+                <li><img src="/images/clipboard-check-outline.svg">Tasks</li>
+                <li><img src="/images/account-group.svg">Communities</li>
             </ul>
         </div>
         <div id="sidebar-options">
             <ul>
-                <li>Settings</li>
-                <li>Support</li>
-                <li>Privacy</li>
+                <li><img src="/images/cog.svg">Settings</li>
+                <li><img src="/images/help-box.svg">Support</li>
+                <li><img src="/images/shield-lock.svg">Privacy</li>
             </ul>
         </div>
     </div>
