Add sidebar search icon

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <form action="">
             <input type="text" name="search" id="header-search" placeholder="Search...">
-            <button type="submit">Search</button>
+            <button type="submit" class="searchButton"><img src="/images/magnify.svg"></button>
         </form>
         <div id="account-container">
             <h3>John Smith</h3>
