Add notification and card icons

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <button type="submit" class="searchButton"><img src="/images/magnify.svg"></button>
         </form>
         <div id="account-container">
+            <img src="/images/bell-ring.svg">
             <h3>John Smith</h3>
         </div>
         <div id="hello-container">
@@ -49,31 +50,61 @@
     </div>
     <div id="main-content">
         <div id="projects">
-            <h2>Your projects</h2>
+            <h2>Your Projects</h2>
             <div id="card-container">
                 <div class="card">
                     <h3>Super Cool Project</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis officiis nobis maiores ipsum eveniet id.</p>
+                    <div class="card-icons">
+                        <img src="/images/star-plus-outline.svg">
+                        <img src="/images/eye-plus-outline.svg">
+                        <img src="/images/share-variant-outline.svg">
+                    </div>
                 </div>
                 <div class="card">
                     <h3>Less Cool Project</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem vitae ea explicabo quo! Laudantium, sit.</p>
+                    <div class="card-icons">
+                        <img src="/images/star-plus-outline.svg">
+                        <img src="/images/eye-plus-outline.svg">
+                        <img src="/images/share-variant-outline.svg">
+                    </div>
                 </div>
                 <div class="card">
                     <h3>Impossible App</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi minus, facere omnis aut deleniti minima!</p>
+                    <div class="card-icons">
+                        <img src="/images/star-plus-outline.svg">
+                        <img src="/images/eye-plus-outline.svg">
+                        <img src="/images/share-variant-outline.svg">
+                    </div>
                 </div>
                 <div class="card">
                     <h3>Easy Peasy App</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic, iure deleniti consequatur qui tempora saepe.</p>
+                    <div class="card-icons">
+                        <img src="/images/star-plus-outline.svg">
+                        <img src="/images/eye-plus-outline.svg">
+                        <img src="/images/share-variant-outline.svg">
+                    </div>
                 </div>
                 <div class="card">
                     <h3>Ad Blocker</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis repellat maiores similique molestias architecto quis?</p>
+                    <div class="card-icons">
+                        <img src="/images/star-plus-outline.svg">
+                        <img src="/images/eye-plus-outline.svg">
+                        <img src="/images/share-variant-outline.svg">
+                    </div>
                 </div>
                 <div class="card">
                     <h3>Money Maker</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis libero deleniti ratione nostrum sequi voluptate.</p>
+                    <div class="card-icons">
+                        <img src="/images/star-plus-outline.svg">
+                        <img src="/images/eye-plus-outline.svg">
+                        <img src="/images/share-variant-outline.svg">
+                    </div>
                 </div>
             </div>
         </div>
