--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
         </form>
         <div id="account-container">
             <img src="/images/bell-ring.svg">
-            <h3>John Smith</h3>
+            <img src="/images/crab.jpg" class="avatar">
+            <h3>Eugene Krabs</h3>
         </div>
         <div id="hello-container">
+            <img src="/images/crab.jpg" class="avatar">
             <p>Hi, there</p>
-            <h2>John Smith</h2>
+            <h2>Eugene Krabs (@mr_krabs)</h2>
         </div>
         <div id="header-main-buttons">
             <button class="new">New</button><button class="upload">Upload</button><button class="share">Share</button>
@@ -112,15 +114,15 @@
             <h2>Announcements</h2>
             <div id="announcement-container">
                 <div class="announcement">
-                    <h3>Site Maintenance</h3>
+                    <h4>Site Maintenance</h4>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam ratione dignissimos doloribus fugit?</p>
                 </div>
                 <div class="announcement">
-                    <h3>Community Share Day</h3>
+                    <h4>Community Share Day</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti itaque obcaecati ea quos.</p>
                 </div>
                 <div class="announcement">
-                    <h3>Updated Privacy Policy</h3>
+                    <h4>Updated Privacy Policy</h4>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae facere nostrum ducimus veritatis?</p>
                 </div>
             </div>
