Add remaining avatars and update Trending section

--- a/index.html
+++ b/index.html
@@ -131,19 +131,23 @@
             <h2>Trending</h2>
             <div id="trending-user-container">
                 <div class="user-container">
-                    <h4>@tegan</h4>
+                    <img src="/images/sponge.jpg" class="avatar">
+                    <h4>@spongebob</h4>
                     <p>World Peace Builder</p>
                 </div>
                 <div class="user-container">
-                    <h4>@morgan</h4>
+                    <img src="/images/crab.jpg" class="avatar">
+                    <h4>@mr_krabs</h4>
                     <p>Super Cool Project</p>
                 </div>
                 <div class="user-container">
-                    <h4>@kendall</h4>
+                    <img src="/images/squid.jpg" class="avatar">
+                    <h4>@squidward</h4>
                     <p>Life Changing App</p>
                 </div>
                 <div class="user-container">
-                    <h4>@alex</h4>
+                    <img src="/images/starfish.jpg" class="avatar">
+                    <h4>@patrick</h4>
                     <p>No Traffic Maker</p>
                 </div>
             </div>
