Add . before images

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <header>
         <form action="">
             <input type="text" name="search" id="header-search" placeholder="Search...">
-            <button type="submit" class="searchButton"><img src="/images/magnify.svg"></button>
+            <button type="submit" class="searchButton"><img src="./images/magnify.svg"></button>
         </form>
         <div id="account-container">
-            <img src="/images/bell-ring.svg">
-            <img src="/images/crab.jpg" class="avatar">
+            <img src="./images/bell-ring.svg">
+            <img src="./images/crab.jpg" class="avatar">
             <h3>Eugene Krabs</h3>
         </div>
         <div id="hello-container">
-            <img src="/images/crab.jpg" class="avatar">
+            <img src="./images/crab.jpg" class="avatar">
             <p>Hi, there</p>
             <h2>Eugene Krabs (@mr_krabs)</h2>
         </div>
@@ -29,24 +29,24 @@
     </header>
     <div id="sidebar">
         <div class="logo">
-            <img src="/images/view-dashboard.svg">
+            <img src="./images/view-dashboard.svg">
             <h2>Dashboard</h2>
         </div>
         <div id="sidebar-buttons">
             <ul>
-                <li><img src="/images/home.svg">Home</li>
-                <li><img src = "/images/card-account-details-outline.svg">Profile</li>
-                <li><img src="/images/message-reply.svg">Messages</li>
-                <li><img src="/images/clock-time-three.svg">History</li>
-                <li><img src="/images/clipboard-check-outline.svg">Tasks</li>
-                <li><img src="/images/account-group.svg">Communities</li>
+                <li><img src="./images/home.svg">Home</li>
+                <li><img src = "./images/card-account-details-outline.svg">Profile</li>
+                <li><img src="./images/message-reply.svg">Messages</li>
+                <li><img src="./images/clock-time-three.svg">History</li>
+                <li><img src="./images/clipboard-check-outline.svg">Tasks</li>
+                <li><img src="./images/account-group.svg">Communities</li>
             </ul>
         </div>
         <div id="sidebar-options">
             <ul>
-                <li><img src="/images/cog.svg">Settings</li>
-                <li><img src="/images/help-box.svg">Support</li>
-                <li><img src="/images/shield-lock.svg">Privacy</li>
+                <li><img src="./images/cog.svg">Settings</li>
+                <li><img src="./images/help-box.svg">Support</li>
+                <li><img src="./images/shield-lock.svg">Privacy</li>
             </ul>
         </div>
     </div>
@@ -58,54 +58,54 @@
                     <h3>Super Cool Project</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis officiis nobis maiores ipsum eveniet id.</p>
                     <div class="card-icons">
-                        <img src="/images/star-plus-outline.svg">
-                        <img src="/images/eye-plus-outline.svg">
-                        <img src="/images/share-variant-outline.svg">
+                        <img src="./images/star-plus-outline.svg">
+                        <img src="./images/eye-plus-outline.svg">
+                        <img src="./images/share-variant-outline.svg">
                     </div>
                 </div>
                 <div class="card">
                     <h3>Less Cool Project</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem vitae ea explicabo quo! Laudantium, sit.</p>
                     <div class="card-icons">
-                        <img src="/images/star-plus-outline.svg">
-                        <img src="/images/eye-plus-outline.svg">
-                        <img src="/images/share-variant-outline.svg">
+                        <img src="./images/star-plus-outline.svg">
+                        <img src="./images/eye-plus-outline.svg">
+                        <img src="./images/share-variant-outline.svg">
                     </div>
                 </div>
                 <div class="card">
                     <h3>Impossible App</h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi minus, facere omnis aut deleniti minima!</p>
                     <div class="card-icons">
-                        <img src="/images/star-plus-outline.svg">
-                        <img src="/images/eye-plus-outline.svg">
-                        <img src="/images/share-variant-outline.svg">
+                        <img src="./images/star-plus-outline.svg">
+                        <img src="./images/eye-plus-outline.svg">
+                        <img src="./images/share-variant-outline.svg">
                     </div>
                 </div>
                 <div class="card">
                     <h3>Easy Peasy App</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic, iure deleniti consequatur qui tempora saepe.</p>
                     <div class="card-icons">
-                        <img src="/images/star-plus-outline.svg">
-                        <img src="/images/eye-plus-outline.svg">
-                        <img src="/images/share-variant-outline.svg">
+                        <img src="./images/star-plus-outline.svg">
+                        <img src="./images/eye-plus-outline.svg">
+                        <img src="./images/share-variant-outline.svg">
                     </div>
                 </div>
                 <div class="card">
                     <h3>Ad Blocker</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis repellat maiores similique molestias architecto quis?</p>
                     <div class="card-icons">
-                        <img src="/images/star-plus-outline.svg">
-                        <img src="/images/eye-plus-outline.svg">
-                        <img src="/images/share-variant-outline.svg">
+                        <img src="./images/star-plus-outline.svg">
+                        <img src="./images/eye-plus-outline.svg">
+                        <img src="./images/share-variant-outline.svg">
                     </div>
                 </div>
                 <div class="card">
                     <h3>Money Maker</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis libero deleniti ratione nostrum sequi voluptate.</p>
                     <div class="card-icons">
-                        <img src="/images/star-plus-outline.svg">
-                        <img src="/images/eye-plus-outline.svg">
-                        <img src="/images/share-variant-outline.svg">
+                        <img src="./images/star-plus-outline.svg">
+                        <img src="./images/eye-plus-outline.svg">
+                        <img src="./images/share-variant-outline.svg">
                     </div>
                 </div>
             </div>
@@ -131,22 +131,22 @@
             <h2>Trending</h2>
             <div id="trending-user-container">
                 <div class="user-container">
-                    <img src="/images/sponge.jpg" class="avatar">
+                    <img src="./images/sponge.jpg" class="avatar">
                     <h4>@spongebob</h4>
                     <p>World Peace Builder</p>
                 </div>
                 <div class="user-container">
-                    <img src="/images/crab.jpg" class="avatar">
+                    <img src="./images/crab.jpg" class="avatar">
                     <h4>@mr_krabs</h4>
                     <p>Super Cool Project</p>
                 </div>
                 <div class="user-container">
-                    <img src="/images/squid.jpg" class="avatar">
+                    <img src="./images/squid.jpg" class="avatar">
                     <h4>@squidward</h4>
                     <p>Life Changing App</p>
                 </div>
                 <div class="user-container">
-                    <img src="/images/starfish.jpg" class="avatar">
+                    <img src="./images/starfish.jpg" class="avatar">
                     <h4>@patrick</h4>
                     <p>No Traffic Maker</p>
                 </div>
